--- a/.development.env
+++ b/.development.env
@@ -1,4 +1,10 @@
-PORT=4000
+PORT=5000
 PRIVATE_KEY=svbwebhv548ervehbv
 JWT_ACCESS_SECRET=secret
 JWT_REFRESH_SECRET=secret2
+MYSQL_HOST=localhost
+DB_PORT=3306
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=cloudydb
+MYSQL_USER=root
+MYSQL_PASSWORD=password
