--- a/.production.env
+++ b/.production.env
@@ -2,10 +2,9 @@ PORT=4000
 PRIVATE_KEY=svbwebhv548ervehbv
 JWT_ACCESS_SECRET=secret
 JWT_REFRESH_SECRET=secret2
-
 MYSQL_HOST=dev-database
 DB_PORT=3306
 MYSQL_ROOT_PASSWORD=password
-MYSQL_DATABASE=makeannounce
+MYSQL_DATABASE=cloudydb
 MYSQL_USER=root
 MYSQL_PASSWORD=password
