--- a/package.json
+++ b/package.json
@@ -1,61 +1,63 @@
 {
-  "name": "makeannounce",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=development npm run rm-migrations && npm run migrate && nest start --watch",
-    "start:local": "cross-env NODE_ENV=local nest start --watch",
-    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": " cross-env NODE_ENV=production npm run rm-migrations && npm run migrate && node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
-    "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/newMigration",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert",
-    "migrate": "npm run migration:generate && npm run migration:run",
-    "rm-migrations": "rm -f src/db/migrations/*.ts"
-  },
-  "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.2",
-    "@nestjs/mapped-types": "^1.2.2",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/serve-static": "^3.0.1",
-    "@nestjs/typeorm": "^9.0.1",
-    "@types/multer": "^1.4.7",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cross-env": "^7.0.3",
-    "mysql2": "^3.1.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
-  }
+   "name": "cloudy",
+   "version": "0.0.1",
+   "description": "",
+   "author": "",
+   "private": true,
+   "license": "UNLICENSED",
+   "scripts": {
+      "prebuild": "rimraf dist",
+      "build": "nest build",
+      "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+      "start": "ts-node src/index.ts",
+      "start:dev": "cross-env NODE_ENV=development nest start --watch",
+      "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+      "start:prod": " cross-env NODE_ENV=production npm run migrate && node dist/main",
+      "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+      "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
+      "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/newMigration",
+      "migration:run": "npm run typeorm -- migration:run",
+      "migration:revert": "npm run typeorm -- migration:revert",
+      "migrate": "npm run migration:generate && npm run migration:run",
+      "rm-migrations": "rm -f src/db/migrations/*.ts"
+   },
+   "dependencies": {
+      "@nestjs/common": "^9.0.0",
+      "@nestjs/config": "^2.3.1",
+      "@nestjs/core": "^9.0.0",
+      "@nestjs/jwt": "^10.0.2",
+      "@nestjs/mapped-types": "^1.2.2",
+      "@nestjs/platform-express": "^9.0.0",
+      "@nestjs/serve-static": "^3.0.1",
+      "@nestjs/swagger": "^6.2.1",
+      "@nestjs/typeorm": "^9.0.1",
+      "@types/multer": "^1.4.7",
+      "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.6",
+      "cross-env": "^7.0.3",
+      "dotenv": "^16.0.3",
+      "mysql2": "^2.3.3",
+      "reflect-metadata": "^0.1.13",
+      "rimraf": "^3.0.2",
+      "rxjs": "^7.2.0",
+      "typeorm": "0.3.11",
+      "uuid": "^9.0.0"
+   },
+   "devDependencies": {
+      "@nestjs/cli": "^9.0.0",
+      "@nestjs/schematics": "^9.0.0",
+      "@types/express": "^4.17.13",
+      "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^5.0.0",
+      "@typescript-eslint/parser": "^5.0.0",
+      "eslint": "^8.0.1",
+      "eslint-config-prettier": "^8.3.0",
+      "eslint-plugin-prettier": "^4.0.0",
+      "prettier": "^2.3.2",
+      "source-map-support": "^0.5.20",
+      "ts-loader": "^9.2.3",
+      "ts-node": "10.7.0",
+      "tsconfig-paths": "4.1.0",
+      "typescript": "4.5.2"
+   }
 }
