--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
       "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
       "start:prod": " cross-env NODE_ENV=production npm run migrate && node dist/main",
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-      "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
-      "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/newMigration",
-      "migration:run": "npm run typeorm -- migration:run",
-      "migration:revert": "npm run typeorm -- migration:revert",
-      "migrate": "npm run migration:generate && npm run migration:run",
-      "rm-migrations": "rm -f src/db/migrations/*.ts"
+      "migrate": "npx prisma migrate dev --name migration",
+      "postmigrate": "npm run pc-generate",
+      "pc-generate": "npx prisma generate"
    },
    "dependencies": {
       "@nestjs/common": "^9.0.0",
@@ -30,7 +27,7 @@
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/serve-static": "^3.0.1",
       "@nestjs/swagger": "^6.2.1",
-      "@nestjs/typeorm": "^9.0.1",
+      "@prisma/client": "^4.11.0",
       "@types/multer": "^1.4.7",
       "bcryptjs": "^2.4.3",
       "cookie-parser": "^1.4.6",
@@ -40,7 +37,6 @@
       "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
       "rxjs": "^7.2.0",
-      "typeorm": "0.3.11",
       "uuid": "^9.0.0"
    },
    "devDependencies": {
@@ -54,6 +50,7 @@
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-prettier": "^4.0.0",
       "prettier": "^2.3.2",
+      "prisma": "^4.11.0",
       "source-map-support": "^0.5.20",
       "ts-loader": "^9.2.3",
       "ts-node": "10.7.0",
