--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "@nestjs/serve-static": "^3.0.1",
       "@nestjs/swagger": "^6.2.1",
       "@prisma/client": "^4.11.0",
+      "@types/fs-extra": "^11.0.1",
       "@types/multer": "^1.4.7",
       "bcryptjs": "^2.4.3",
       "cookie-parser": "^1.4.6",
