--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "cookie-parser": "^1.4.6",
       "cross-env": "^7.0.3",
       "dotenv": "^16.0.3",
+      "mime": "^3.0.0",
       "mysql2": "^2.3.3",
       "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
