--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mysql://root:password@localhost:3306/cloudydb?schema=public"
+PORT=5000
+PRIVATE_KEY=svbwebhv548ervehbv
+JWT_ACCESS_SECRET=secret
+JWT_REFRESH_SECRET=secret2
+DATABASE_URL="mysql://root:password@database:3306/cloudydb?schema=public?connect_timeout=600"
