--- a/.env.local
+++ b/.env.local
@@ -2,4 +2,4 @@ PORT=5000
 PRIVATE_KEY=svbwebhv548ervehbv
 JWT_ACCESS_SECRET=secret
 JWT_REFRESH_SECRET=secret2
-DATABASE_URL="mysql://root:password@dev-database:3306/cloudydb?schema=public"
+DATABASE_URL="mysql://root:password@localhost:3306/cloudydb?schema=public"
