--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
       "start": "ts-node src/index.ts",
-      "start:dev": "cross-env NODE_ENV=development nest start --watch",
+      "start:dev": "dotenv -e .env.local -- nest start --watch",
+      "start:docdev": "cross-env NODE_ENV=development npm run migrate && nest start --watch",
       "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
       "start:prod": " cross-env NODE_ENV=production npm run migrate && node dist/main",
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
       "migrate": "npx prisma migrate dev --name migration",
-      "postmigrate": "npm run pc-generate",
+      "migrate:local": "dotenv -e .env.local -- npx prisma migrate dev --name migration",
+      "premigrate": "npm run pc-generate",
+      "premigrate:local": "npm run pc-generate",
       "pc-generate": "npx prisma generate"
    },
    "dependencies": {
@@ -34,6 +37,7 @@
       "cookie-parser": "^1.4.6",
       "cross-env": "^7.0.3",
       "dotenv": "^16.0.3",
+      "dotenv-cli": "^7.1.0",
       "mime": "^3.0.0",
       "mysql2": "^2.3.3",
       "reflect-metadata": "^0.1.13",
