--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
       "migrate": "npx prisma migrate dev --name migration",
       "migrate:local": "dotenv -e .env.local -- npx prisma migrate dev --name migration",
-      "premigrate": "npm run pc-generate",
-      "premigrate:local": "npm run pc-generate",
+      "postmigrate": "npm run pc-generate",
+      "postmigrate:local": "npm run pc-generate",
       "pc-generate": "npx prisma generate"
    },
    "dependencies": {
